--- a/application/index/view/info/information.html
+++ b/application/index/view/info/information.html
@@ -178,7 +178,8 @@
                                     <label for="user-name2" class="am-form-label">昵称</label>
                                     <div class="am-form-content">
                                         <input type="hidden" name="id" value="{$res['id']}">
-                                        <input type="text" id="user-name2" value="{$res['user']}" disabled  name='user' >
+                                        <input type="hidden" name="uid" value="{$res['uid']}">
+                                        <input type="text" id="user-name2" value="{$res['username']}"   name='username' >
                                           <small></small>
                                     </div>
                                 </div>
