--- a/application/index/view/info/password.html
+++ b/application/index/view/info/password.html
@@ -23,7 +23,7 @@
 		<aside class="menu">
 				<ul>
 					<li class="person active">
-						<a href="index"><i class="am-icon-user"></i>个人中心</a>
+						<a href="info"><i class="am-icon-user"></i>个人中心</a>
 					</li>
 					<li class="person">
 						<ul>
@@ -89,7 +89,7 @@
 						<div class="am-form-group">
 							<label for="user-old-password" class="am-form-label">原密码</label>
 							<div class="am-form-content">
-								<input type="password" id="user-old-password" placeholder="请输入原登录密码" name='password'>
+								<input type="password" id="user-old-password" placeholder="如果第三方登陆，默认密码为123456" name='password'>
 							</div>
 						</div>
 						<div class="am-form-group">
@@ -140,7 +140,7 @@
 			<aside class="menu">
 				<ul>
 					<li class="person active">
-						<a href="index.html"><i class="am-icon-user"></i>个人中心</a>
+						<a href="info"><i class="am-icon-user"></i>个人中心</a>
 					</li>
 					<li class="person">
 						<ul>
