--- a/application/index/view/user/login.html
+++ b/application/index/view/user/login.html
@@ -11,17 +11,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />	
-	
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
@@ -35,6 +24,7 @@
 	<!-- Modernizr JS -->
 	<script src="__INDEX__js/modernizr-2.6.2.min.js"></script>
 	<script type="text/javascript" src='__INDEX__js/jquery-1.9.1.min.js'></script>
+	<script type="text/javascript" src="http://open.51094.com/user/myscript/15ab849fb7741e.html"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -61,6 +51,9 @@
 						</div>
 						<div class="form-group">
 							<input type="button" value="登陆	" class="btn btn-primary">
+						</div>
+						<div class="form-group">
+							<span id="hzy_fast_login"></span>
 						</div>
 					</form>
 					<!-- END Sign In Form -->
