--- a/application/index/view/info/bindphone.html
+++ b/application/index/view/info/bindphone.html
@@ -91,7 +91,7 @@
 						<div class="am-form-group code">
 							<label for="user-code" class="am-form-label">验证码</label>
 							<div class="am-form-content">
-								<input type="text" id="user-code" placeholder="短信验证码" style="width:178px" required name='yzm'>
+								<input type="text" id="user-code" placeholder="短信验证码"  name='yzm'>
 							</div>
 							<a class="btn" href="javascript:void(0);" onclick= "xinphone1()"; id="xinphone">
 								<div class="am-btn am-btn-danger" ><sapn id='yzm'>验证码</sapn></div>
@@ -207,14 +207,13 @@
 	data = $('#user-phone').text();
 	res = data.substring(0,3) + '****' + data.substring(7,11);
 	$('#user-phone').text(res);
-	
-	var val;
+
+	//判断手机号
 	$("#user-new-phone").blur(function () {
-		val = $('#user-new-phone').attr('value');
+		var val = $('#user-new-phone').attr('value');
 		var mobilevalid = /^(0|86|17951)?(13[0-9]|15[012356789]|17[0678]|18[0-9]|14[57])[0-9]{8}$/;
 		if (!mobilevalid.test(val)) {
-			alert('请输入正确的手机号码！');
-			
+			alert('请输入正确的手机号码！');			
 		}	
 	});	
 		
