--- a/application/index/view/jifen/points.html
+++ b/application/index/view/jifen/points.html
@@ -3,10 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-
 		<title>积分明细</title>
-
 		<link href="__INDEX__AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
 		<link href="__INDEX__AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
 		<link href="__INDEX__css/personal.css" rel="stylesheet" type="text/css">
@@ -18,6 +15,7 @@
 	<body>
 		<!--头 -->
 		<aside class="menu">
+				
 				<ul>
 					<li class="person active">
 						<a href="info"><i class="am-icon-user"></i>个人中心</a>
@@ -25,32 +23,12 @@
 					<li class="person">
 						<ul>
 							<li> <a href="info">个人信息</a></li>
-							<li> <a href="safety.html">安全设置</a></li>					
-							<li> <a href="points.html">我的积分</a></li>
-							<li> <a href="coupon.html">积分兑换 </a></li>
-							<li> <a href="bonus.html">红包</a></li>
-							<li> <a href="walletlist.html">账户余额</a></li>
-							<li> <a href="bill.html">账单明细</a></li>
+							<li> <a href="safety">安全设置</a></li>					
+							<li> <a href="jifrn/points">我的积分</a></li>
+							<li> <a href="jifen/coupon">我的VIp	 </a></li>
+							<li> <a href="bonus.html">红包</a></li>	
 						</ul>
 					</li>
-
-					<li class="person">
-						<p><i class="am-icon-tags"></i>我的收藏</p>
-						<ul>
-							<li> <a href="collection.html">收藏</a></li>
-							<li> <a href="foot.html">足迹</a></li>														
-						</ul>
-					</li>
-
-					<li class="person">
-						<p><i class="am-icon-qq"></i>在线客服</p>
-						<ul>
-							<li> <a href="suggest.html">意见反馈</a></li>							
-							
-							<li> <a href="news.html">我的消息</a></li>
-						</ul>
-					</li>
-				</ul>
 
 			</aside>
 		
@@ -65,9 +43,9 @@
 						</div>
 						<hr/>
 						<div class="pointsTitle">
-						   <div class="usable">可用积分<span>{$res[0]['number']}</span></div>
+						   <div class="usable">可用积分<span id='number'>{$res[0]['number']}</span></div>
 						   <!-- <div class="pointshop"><a href="#"><i><img src="__INDEX__images/u5.png" /></i>积分商城</a></div> -->
-						   <div class="signIn"><a href="javasprice:" onclick="jifen()"><i class="am-icon-calendar"></i><em>+5</em>每日签到</a></div>
+						   <div class="signIn"><a href="javasprice:" onclick="jifen({$res[0]['uid']})"><i class="am-icon-calendar"></i><em>+5</em>每日签到</a></div>
 						</div>
 						<div class="pointlist am-tabs" data-am-tabs>
 							<ul class="am-avg-sm-3 am-tabs-nav am-nav am-nav-tabs">
@@ -175,39 +153,36 @@
 			</div>
 
 			<aside class="menu">
-				<ul>
-					<li class="person active">
-						<a href="info"><i class="am-icon-user"></i>个人中心</a>
-					</li>
-					<li class="person">
-						<ul>
-							<li> <a href="information">个人信息</a></li>
-							<li> <a href="safety">安全设置</a></li>					
-							<li> <a href="points">我的积分</a></li>
-							<li> <a href="coupon">积分兑换 </a></li>
-							<li> <a href="bonus">红包</a></li>
-							<li> <a href="walletlist">账户余额</a></li>
-							<li> <a href="bill">账单明细</a></li>
-						</ul>
-					</li>
+				  <ul>
+                    <li class="person active">
+                        <a href="index.html"><i class="am-icon-user"></i>个人中心</a>
+                    </li>
+                    <li class="person">
+                        <ul>
+                            <li> <a href="info">个人信息</a></li>
+                            <li> <a href="safety">安全设置</a></li>                 
+                            <li> <a href="points">我的积分</a></li>
+                            <li> <a href="jifen/coupon">我的VIp    </a></li>
+                            <li> <a href="bonus.html">红包</a></li>               
+                        </ul>
+                    </li>
+                    <li class="person">
+                        <p><i class="am-icon-tags"></i>我的收藏</p>
+                        <ul>
+                            <li> <a href="collection">收藏</a></li>
+                            <li> <a href="foot">观看历史</a></li>   
+                        </ul>
+                    </li>
 
-					<li class="person">
-						<p><i class="am-icon-tags"></i>我的收藏</p>
-						<ul>
-							<li> <a href="collection.html">收藏</a></li>
-							<li> <a href="foot.html">足迹</a></li>														
-						</ul>
-					</li>
-
-					<li class="person">
-						<p><i class="am-icon-qq"></i>在线客服</p>
-						<ul>
-							<li> <a href="suggest.html">意见反馈</a></li>							
-							
-							<li> <a href="news.html">我的消息</a></li>
-						</ul>
-					</li>
-				</ul>
+                    <li class="person">
+                        <p><i class="am-icon-qq"></i>在线客服</p>
+                        <ul>
+                            <li> <a href="suggest.html">意见反馈</a></li>                           
+                            
+                            <li> <a href="news.html">我的消息</a></li>
+                        </ul>
+                    </li>
+                </ul>
 
 			</aside>
 		</div>
@@ -216,6 +191,23 @@
 
 </html>
 <script type="text/javascript">
-	
+	function jifen(id)
+	{
+		$.get("{:url('qiandao')}",{'uid':id},success);
+	}
+	function success(data)
+	{
+
+		/*if (data  == 3) {
+			//alert('距离上次签到不到一天')
+		
+		}*/
+		console.log(data);
+		var s = $('#number').text();
+		console.log(s);
+		console.log(s + 5);	
+		$('#number').text(s + 5);
+
+	}
 
 </script>
