--- a/application/index/view/jifen/suggest.html
+++ b/application/index/view/jifen/suggest.html
@@ -116,39 +116,36 @@
 			</div>
 
 			<aside class="menu">
-				<ul>
-					<li class="person active">
-						<a href="index.html"><i class="am-icon-user"></i>个人中心</a>
-					</li>
-					<li class="person">
-						<ul>
-							<li> <a href="information.html">个人信息</a></li>
-							<li> <a href="safety.html">安全设置</a></li>					
-							<li> <a href="points.html">我的积分</a></li>
-							<li> <a href="coupon.html">优惠券 </a></li>
-							<li> <a href="bonus.html">红包</a></li>
-							<li> <a href="walletlist.html">账户余额</a></li>
-							<li> <a href="bill.html">账单明细</a></li>
-						</ul>
-					</li>
+				  <ul>
+                    <li class="person active">
+                        <a href="index.html"><i class="am-icon-user"></i>个人中心</a>
+                    </li>
+                    <li class="person">
+                        <ul>
+                            <li> <a href="info">个人信息</a></li>
+                            <li> <a href="safety">安全设置</a></li>                 
+                            <li> <a href="points">我的积分</a></li>
+                            <li> <a href="jifen/coupon">我的VIp    </a></li>
+                            <li> <a href="bonus.html">红包</a></li>               
+                        </ul>
+                    </li>
+                    <li class="person">
+                        <p><i class="am-icon-tags"></i>我的收藏</p>
+                        <ul>
+                            <li> <a href="collection">收藏</a></li>
+                            <li> <a href="foot">观看历史</a></li>   
+                        </ul>
+                    </li>
 
-					<li class="person">
-						<p><i class="am-icon-tags"></i>我的收藏</p>
-						<ul>
-							<li> <a href="collection.html">收藏</a></li>
-							<li> <a href="foot.html">足迹</a></li>														
-						</ul>
-					</li>
-
-					<li class="person">
-						<p><i class="am-icon-qq"></i>在线客服</p>
-						<ul>
-							<li> <a href="suggest.html">意见反馈</a></li>							
-							
-							<li> <a href="news.html">我的消息</a></li>
-						</ul>
-					</li>
-				</ul>
+                    <li class="person">
+                        <p><i class="am-icon-qq"></i>在线客服</p>
+                        <ul>
+                            <li> <a href="suggest.html">意见反馈</a></li>                           
+                            
+                            <li> <a href="news.html">我的消息</a></li>
+                        </ul>
+                    </li>
+                </ul>
 
 			</aside>
 		</div>
