--- a/application/index/view/user/register.html
+++ b/application/index/view/user/register.html
@@ -46,32 +46,35 @@
 				<div class="col-md-4 col-md-offset-4">
 					
 					<!-- Start Sign In Form -->
-					  <form action="" class="fh5co-form animate-box" data-animate-effect="fadeInRight" method='post'>  
-					  <form action="index/user/phone" class="fh5co-form animate-box" data-animate-effect="fadeInRight" method='post'>
+					
+					  <form action="index/user/doregister" class="fh5co-form animate-box" data-animate-effect="fadeInRight" method='post' id="formform">
 						<h2>注册账号</h2>
 						<div class="form-group">
 							<div class="alert alert-success" role="alert">请输入手机号
-							<input type='number' name='phone' />
+							<input type='phone' name='phone' id='user-new-phone' />
+							<p style='color:red;' id="pphone"></p>
 							</div>
 						</div>
 						<div class="form-group">
 							<div class="alert alert-success" role="alert">
-							<input type='text' name='code'  />
+							<input type='text' name='code' id='user-code' />
 
 							<button id='but'>获取验证码</button>
 							</div>
-						</div>
+						</div>	
 						<div class="form-group">
 							<label for="name" class="sr-only">用户名</label>
-							<input type="text" class="form-control"  placeholder="用户名" autocomplete="off" name="user">
+							<input type="text" class="form-control"  placeholder="用户名" autocomplete="off" name="user" id='name'>
+							<p style='color:red;' id="pname"></p>
 						</div>
 						<div class="form-group">
 							<label for="email" class="sr-only">密码</label>
-							<input type="password" class="form-control" placeholder="密码" autocomplete="off" name='password'>
+							<input type="password" class="form-control" placeholder="密码" autocomplete="off" name='password' id='pass'>
 						</div>
 						<div class="form-group">
 							<label for="re-password" class="sr-only">确认密码</label>
-							<input type="password" class="form-control"  placeholder="确认密码" autocomplete="off" name='newpass'>
+							<input type="password" class="form-control"  placeholder="确认密码" autocomplete="off" name='newpass' id='newpass'>
+							<p style='color:red;' id="p"></p>
 						</div>
 						<div class="form-group">
 							<p>已经注册? <a href="login">登陆</a></p>
@@ -101,10 +104,57 @@
 	</body>
 </html>
 <script type="text/javascript">
+	var s = 'e';
+	var p = 'p';
+	//判断手机号
+	$("#user-new-phone").blur(function () {
+		var val = $('#user-new-phone').val();	
+		var mobilevalid = /^(0|86|17951)?(13[0-9]|15[012356789]|17[0678]|18[0-9]|14[57])[0-9]{8}$/;
+		if (!mobilevalid.test(val)) {
+			p = 'z';
+			$('#pphone').text('请输入正确的手机号码！');
+		} else {
+			p = 'p';
+			$('#pphone').text('');
+		}
+	});	
+	//判断密码输入是否相同
+	$("#newpass").blur(function () {
+		var newpass = $("#newpass").val();
+		var pass = $("#pass").val();
+		if (newpass != pass ) {
+			s= 'q';
+			$('#p').text('两次密码不相同');
+		} else {
+			s= 'e';
+			$('#p').text('');
+		}
+	});
+
+	var n = 'n';
+	//判断用户名是否存在
+	$("#name").blur(function () {
+		var user = $("#name").val();
+		$.get("{:url('username')}",{'user':user},function(data) {
+			if (data == 0) {
+				$('#pname').text('用户名已存在');
+				n = 'z';
+				
+			} else {
+				n = 'n';
+				$('#pname').text('');	
+			}
+		});
+	});
+
 	var oBut = document.getElementById('but');
 	var flag = true;
 	//短信验证
 	$('#but').click(function(){
+		/*if ($('#user-new-phone').val() == '' ) {
+			alert('请输入手机号');
+			return false;
+		}*/
 		if(flag) {
 			flag = false;
 			var s = 10;
@@ -130,48 +180,55 @@
 		}
 		return false;
 	});
+
+
 	function success(data)
 	{
-		alert(data);
+		//alert(data);
 	}
 	//注册提交
-	$('#tijao').click(function() {
-		var data = $('input');
-		$.ajax({
-			type:'post',
-			url:'index/user/doregister',
-			data:data,
-			async:true,
-			success:succ
-		});
-		return false;
-	});
-	//注册返回信息
-	function succ(data)
-	{
-		alert('')
-	}
+	$('#tijiao').click(function () {
+		if ($('#user-new-phone').val() == '' && p == 'p') {
+			alert('请输入手机号');
+			return false;
+		}
+		if ( $('#user-code').val() == '') {
+			alert('请填写验证码');
+			return false;
+		}
+		if ( $('#name').val() == '' && n == 'n') {
+			alert('请填写用户名');
+			return false;
+		}
+		if (s != 'e' ) {
+			alert('两次密码不相同');
+			return false;
+		}
 
-/*
-	function success(data)
-	{
-		alert(data);
-	}
-
-	$('#tijao').click(function () {
-		var data = $('input');
+		var data = $('#formform');
 		$.ajax({
 			type: 'post',
-			url:'idnex/user/doregister',
+			url:'index/user/doregister',
 			data:data,
 			async:true,
 			success:succ,
 		});
 	});
 	function succ(data)
-	{
-		alert(data);
-	}*/
+	{ 
+		console.log(data);
+		return false;
+		if (data == 1 ) {
+			alert('注册成功');
+			 window.location.href = '../index';
+		} else if (data == 3) {
+			alert('手机验证码不正确');
+		} else {
+			alert('注册失败');
+			location=location;
+		}
+		 
+	}
 
 </script>
 
