--- a/application/index/view/info/password.html
+++ b/application/index/view/info/password.html
@@ -22,20 +22,18 @@
 		<!--头 -->
 		<aside class="menu">
 				<ul>
-					<li class="person active">
-						<a href="info"><i class="am-icon-user"></i>个人中心</a>
-					</li>
-					<li class="person">
-						<ul>
-							<li> <a href="info">个人信息</a></li>
-							<li> <a href="safety">安全设置</a></li>					
-							<li> <a href="points">我的积分</a></li>
-							<li> <a href="coupon">优惠券 </a></li>
-							<li> <a href="bonus">红包</a></li>
-							<li> <a href="walletlist">账户余额</a></li>
-							<li> <a href="bill">账单明细</a></li>
-						</ul>
-					</li>
+                    <li class="person active">
+                        <a href="info"><i class="am-icon-user"></i>个人中心</a>
+                    </li>
+                    <li class="person">
+                        <ul>
+                            <li> <a href="info">个人信息</a></li>
+                            <li> <a href="safety">安全设置</a></li>                 
+                            <li> <a href="points">我的积分</a></li>
+                            <li> <a href="coupon">我的VIp</a></li>
+                            <li> <a href="bonus">积分兑换</a></li>               
+                        </ul>
+                    </li>
 
 					<li class="person">
 						<p><i class="am-icon-tags"></i>我的收藏</p>
