--- a/application/index/view/jifen/collection.html
+++ b/application/index/view/jifen/collection.html
@@ -170,8 +170,8 @@
                             <li> <a href="info">个人信息</a></li>
                             <li> <a href="safety">安全设置</a></li>                 
                             <li> <a href="points">我的积分</a></li>
-                            <li> <a href="jifen/coupon">我的VIp    </a></li>
-                            <li> <a href="bonus.html">红包</a></li>               
+                            <li> <a href="coupon">我的VIp    </a></li>
+                            <li> <a href="bonus.html">积分兑换</a></li>               
                         </ul>
                     </li>
                     <li class="person">
