--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -56,17 +56,7 @@
 					</ul><!-- .menu -->
 				</nav><!-- #navigation -->
 
-				<!--  <div id="navigation-hamburger">
-        
-          <span class="navigation-hamburger-hook"><span class="fa fa-reorder"></span></span>
-          <select>
-                    <option value="#">- Select -</option>
-            <option value="#">- Select -</option>
-            automatically populated based on #navigation
-          </select>
-        
-        </div>#navigation-hamburger
-         -->
+			
 				<div id="header-search">
 					<div class="header-search-inner">
 						<form method="get" action="search.html">
@@ -77,11 +67,11 @@
 				</div><!-- #header-search -->
 
 				<div id="header-social">
-          {if empty($user)}
+          {if empty($name)}
 					<a href="../login" target="_blank" class="fa">登陆</a>
 					<a href="../register" target="_blank" class="fa">注册</a>
           {else}
-          <a href=''>{$user}</a>
+          <a href=''>{$name}</a>
           
           <a href="info">个人中心</a>
           {/if}
