--- a/application/index/view/info/bindphone.html
+++ b/application/index/view/info/bindphone.html
@@ -25,23 +25,17 @@
 				<div class="mt-logo">
 					<!--顶部导航条 -->
 					<div class="am-container header">
-						<ul class="message-l">
-							<div class="topMessage">
 							
-							</div>
-						</ul>
 						<ul class="message-r">
-							<div class="topMessage home">
-								<div class="menu-hd"><a href="#" target="_top" class="h">首页</a></div>
-							</div>
+							
 							<div class="topMessage my-shangcheng">
-								<div class="menu-hd MyShangcheng"><a href="#" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
+								<div class="menu-hd MyShangcheng"><a href="info" target="_top"><i ></i>	</a></div>
 							</div>
 							<div class="topMessage mini-cart">
-								<div class="menu-hd"><a id="mc-menu-hd" href="#" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>购物车</span><strong id="J_MiniCartNum" class="h">0</strong></a></div>
+								<div class="menu-hd"><a id="mc-menu-hd" href="foot" target="_top"><span>足迹</span><strong id="J_MiniCartNum" class="h">0</strong></a></div>
 							</div>
 							<div class="topMessage favorite">
-								<div class="menu-hd"><a href="#" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
+								<div class="menu-hd"><a href="collection" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
 						</ul>
 						</div>
 
@@ -133,10 +127,11 @@
 								<div class="am-btn am-btn-danger"><sapn id='yzm2'>验证码</sapn></div>
 							</a>
 						</div>
-						{/if}
 						<div class="info-btn"><button onclick='upda()'>
 							<div class="am-btn am-btn-danger">保存修改</div></button>
 						</div>
+						{/if}
+						
 					</form>
 				
 				</div>
@@ -166,20 +161,18 @@
 			</div>
 						<aside class="menu">
 				<ul>
-					<li class="person active">
-						<a href="index.html"><i class="am-icon-user"></i>个人中心</a>
-					</li>
-					<li class="person">
-						<ul>
-							<li> <a href="information.html">个人信息</a></li>
-							<li> <a href="safety.html">安全设置</a></li>					
-							<li> <a href="points.html">我的积分</a></li>
-							<li> <a href="coupon.html">优惠券 </a></li>
-							<li> <a href="bonus.html">红包</a></li>
-							<li> <a href="walletlist.html">账户余额</a></li>
-							<li> <a href="bill.html">账单明细</a></li>
-						</ul>
-					</li>
+                    <li class="person active">
+                        <a href="info"><i class="am-icon-user"></i>个人中心</a>
+                    </li>
+                    <li class="person">
+                        <ul>
+                            <li> <a href="info">个人信息</a></li>
+                            <li> <a href="safety">安全设置</a></li>                 
+                            <li> <a href="points">我的积分</a></li>
+                            <li> <a href="coupon">我的VIp</a></li>
+                            <li> <a href="bonus">积分兑换</a></li>               
+                        </ul>
+                    </li>
 
 					<li class="person">
 						<p><i class="am-icon-tags"></i>我的收藏</p>
@@ -190,9 +183,6 @@
 					</li>
 
 					<li class="person">
-						<p><i class="am-icon-qq"></i>在线客服</p>
-						<ul>
-							<li> <a href="consultation.html">商品咨询</a></li>
 							<li> <a href="suggest.html">意见反馈</a></li>							
 							
 							<li> <a href="news.html">我的消息</a></li>
