--- a/application/index/view/info/email.html
+++ b/application/index/view/info/email.html
@@ -17,7 +17,6 @@
 		<script src="__INDEX__AmazeUI-2.4.2/assets/js/amazeui.js"></script>
 
 	</head>
-
 	<body>
 		<!--头 -->
 		<header>
@@ -25,23 +24,17 @@
 				<div class="mt-logo">
 					<!--顶部导航条 -->
 					<div class="am-container header">
-						<ul class="message-l">
-							<div class="topMessage">
 							
-							</div>
-						</ul>
 						<ul class="message-r">
-							<div class="topMessage home">
-								<div class="menu-hd"><a href="#" target="_top" class="h">首页</a></div>
-							</div>
+							
 							<div class="topMessage my-shangcheng">
-								<div class="menu-hd MyShangcheng"><a href="#" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
+								<div class="menu-hd MyShangcheng"><a href="info" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
 							</div>
 							<div class="topMessage mini-cart">
-								<div class="menu-hd"><a id="mc-menu-hd" href="#" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>购物车</span><strong id="J_MiniCartNum" class="h">0</strong></a></div>
+								<div class="menu-hd"><a id="mc-menu-hd" href="foot" target="_top"><span>足迹</span><strong id="J_MiniCartNum" class="h">0</strong></a></div>
 							</div>
 							<div class="topMessage favorite">
-								<div class="menu-hd"><a href="#" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
+								<div class="menu-hd"><a href="collection" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
 						</ul>
 						</div>
 
@@ -68,7 +61,7 @@
                                 <i class="u-stage-icon-inner">1<em class="bg"></em></i>
                                 <p class="stage-name">验证邮箱</p>
                             </span>
-							<span class="step-2 step">
+							<span class="step-2 step" id="setr">
                                 <em class="u-progress-stage-bg"></em>
                                 <i class="u-stage-icon-inner">2<em class="bg"></em></i>
                                 <p class="stage-name">完成</p>
@@ -84,19 +77,22 @@
 							<label for="user-email" class="am-form-label">验证邮箱</label>
 							<div class="am-form-content">
 								<input type="email" id="user-email" placeholder="请输入邮箱地址">
+								<p style="color:red" id='pyou'></p>
 							</div>
 						</div>
 						<div class="am-form-group code">
 							<label for="user-code" class="am-form-label">验证码</label>
 							<div class="am-form-content">
-								<input type="tel" id="user-code" placeholder="验证码">
+								<input type="tel" id="user-code" placeholder="验证码" style="width:178px">
 							</div>
-							<a class="btn" href="javascript:void(0);" onclick="sendMobileCode();" id="sendMobileCode">
-								<div class="am-btn am-btn-danger">验证码</div>
+							<a class="btn"  onclick="sendMobileCode();" id="sendMobileCode">
+								<div class="am-btn am-btn-danger" id="btnyzm">验证码</div>
 							</a>
 						</div>
 						<div class="info-btn">
+							<button id ='btntj' onclick=" return success(3)">
 							<div class="am-btn am-btn-danger">保存修改</div>
+							</button>
 						</div>
 
 					</form>
@@ -129,20 +125,18 @@
 
 			<aside class="menu">
 				<ul>
-					<li class="person active">
-						<a href="index.html"><i class="am-icon-user"></i>个人中心</a>
-					</li>
-					<li class="person">
-						<ul>
-							<li> <a href="information.html">个人信息</a></li>
-							<li> <a href="safety.html">安全设置</a></li>					
-							<li> <a href="points.html">我的积分</a></li>
-							<li> <a href="coupon.html">优惠券 </a></li>
-							<li> <a href="bonus.html">红包</a></li>
-							<li> <a href="walletlist.html">账户余额</a></li>
-							<li> <a href="bill.html">账单明细</a></li>
-						</ul>
-					</li>
+                    <li class="person active">
+                        <a href="info"><i class="am-icon-user"></i>个人中心</a>
+                    </li>
+                    <li class="person">
+                        <ul>
+                            <li> <a href="info">个人信息</a></li>
+                            <li> <a href="safety">安全设置</a></li>                 
+                            <li> <a href="points">我的积分</a></li>
+                            <li> <a href="coupon">我的VIp</a></li>
+                            <li> <a href="bonus">积分兑换</a></li>               
+                        </ul>
+                    </li>
 
 					<li class="person">
 						<p><i class="am-icon-tags"></i>我的收藏</p>
@@ -160,9 +154,79 @@
 						</ul>
 					</li>
 				</ul>
-
 			</aside></div>
 
 	</body>
 
 </html>
+<script type="text/javascript">
+	var e = 'e';
+	$("#user-email").blur(function () {
+		var val = $("#user-email").attr('value');
+		var mobilevalid = /^([a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(.[a-zA-Z0-9_-])+/;
+		if (!mobilevalid.test(val)) {
+			e = 'p';
+			$('#pyou').html('请输入正确的邮箱地址');	
+		} else {
+			e = 'e';
+			$('#pyou').html('');	
+		}
+	});
+
+
+	var flag = true;
+	function sendMobileCode()
+	{
+		if (e != 'e') {
+			alert('请输入正确的邮箱地址');
+			return false;
+		}
+
+		if (flag) {
+			flag = false;
+			var s = 5;
+			var timer = setInterval(function (){
+				$('#btnyzm').text(s+"秒后重新发送");
+				if (s <0) {
+					$('#btnyzm').text('重新发送');
+					clearInterval(timer);
+					flag = true;
+				}
+				s--;
+			},1000);
+			var data = $("#user-email").attr('value');
+		$.get("{:url('user/doemail')}",{'email':data},function (data) {
+			console.log(data);
+		});
+
+		}
+	}
+
+
+	$('#btntj').click(function () {
+		$.ajax({
+			type:'post',
+			url:"{:url('user/emailyzm')}",
+			data:data,
+			success:success
+		});
+	});
+
+	function success(data)
+	{
+		if (data == 2) {
+			alert('验证码输入错误');
+			return false;
+		} else  if (data == 1) {
+			alert('修改失败，请联系管理员')
+			return false;
+		} 
+
+		$("#setr").attr('class','step-1 step');
+		alert('修改成功');
+		return false;
+
+	}
+
+
+</script>
