--- a/application/index/view/info/information.html
+++ b/application/index/view/info/information.html
@@ -81,23 +81,19 @@
                 <div class="mt-logo">
                     <!--顶部导航条 -->
                     <div class="am-container header">
-                        <ul class="message-l">
-                            <div class="topMessage">
                             
-                            </div>
-                        </ul>
                         <ul class="message-r">
-                            <div class="topMessage home">
-                                <div class="menu-hd"><a href="#" target="_top" class="h">首页</a></div>
+                                <div class="topMessage home">
+                                <div class="menu-hd"><a href="/ " target="_top" class="h">首页</a></div>
                             </div>
                             <div class="topMessage my-shangcheng">
-                                <div class="menu-hd MyShangcheng"><a href="#" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
+                                <div class="menu-hd MyShangcheng"><a href="info" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
                             </div>
                             <div class="topMessage mini-cart">
-                                <div class="menu-hd"><a id="mc-menu-hd" href="#" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>足迹</span><strong id="J_MiniCartNum" class="h">0</strong></a></div>
+                                <div class="menu-hd"><a id="mc-menu-hd" href="foot" target="_top"><span>足迹</span><strong id="J_MiniCartNum" class="h"></strong></a></div>
                             </div>
                             <div class="topMessage favorite">
-                                <div class="menu-hd"><a href="#" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
+                                <div class="menu-hd"><a href="collection" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
                         </ul>
                         </div>
                         <div class="clear"></div>
@@ -300,15 +296,15 @@
             <aside class="menu">
                 <ul>
                     <li class="person active">
-                        <a href="index.html"><i class="am-icon-user"></i>个人中心</a>
+                        <a href="info"><i class="am-icon-user"></i>个人中心</a>
                     </li>
                     <li class="person">
                         <ul>
                             <li> <a href="info">个人信息</a></li>
                             <li> <a href="safety">安全设置</a></li>                 
                             <li> <a href="points">我的积分</a></li>
-                            <li> <a href="jifen/coupon">我的VIp    </a></li>
-                            <li> <a href="bonus.html">红包</a></li>               
+                            <li> <a href="coupon">我的VIp</a></li>
+                            <li> <a href="bonus">积分兑换</a></li>               
                         </ul>
                     </li>
                     <li class="person">
