--- a/application/index/view/info/safety.html
+++ b/application/index/view/info/safety.html
@@ -32,10 +32,10 @@
 								<div class="menu-hd"><a href="/	" target="_top" class="h">首页</a></div>
 							</div>
 							<div class="topMessage my-shangcheng">
-								<div class="menu-hd MyShangcheng"><a href="#" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
+								<div class="menu-hd MyShangcheng"><a href="info" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
 							</div>
 							<div class="topMessage mini-cart">
-								<div class="menu-hd"><a id="mc-menu-hd" href="#" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>购物车</span><strong id="J_MiniCartNum" class="h">0</strong></a></div>
+								<div class="menu-hd"><a id="mc-menu-hd" href="#" target="_top"><span>足迹</span><strong id="J_MiniCartNum" class="h"></strong></a></div>
 							</div>
 							<div class="topMessage favorite">
 								<div class="menu-hd"><a href="#" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
@@ -126,18 +126,7 @@
 										</a>
 									</div>
 								</li>
-								<li>
-									<i class="i-safety-idcard"></i>
-									<div class="m-left">
-										<div class="fore1">实名认证</div>
-										<div class="fore2"><small>用于提升账号的安全性和信任级别，认证后不能修改认证信息。</small></div>
-									</div>
-									<div class="fore3">
-										<a href="idcard.html">
-											<div class="am-btn am-btn-secondary">认证</div>
-										</a>
-									</div>
-								</li>
+								
 							</ul>
 						</div>
 
@@ -170,18 +159,18 @@
 
 			<aside class="menu">
 				<ul>
-					<li class="person active">
-						<a href="index.html"><i class="am-icon-user"></i>个人中心</a>
-					</li>
-					<li class="person">
-						<ul>
-							<li> <a href="info">个人信息</a></li>
-							<li> <a href="safety">安全设置</a></li>					
-							<li> <a href="{:url('index/jifen/points')}">我的积分</a></li>
-							<li> <a href="jifen/coupon">我的VIp	 </a></li>
-							<li> <a href="bonus.html">红包</a></li>	
-						</ul>
-					</li>
+                    <li class="person active">
+                        <a href="info"><i class="am-icon-user"></i>个人中心</a>
+                    </li>
+                    <li class="person">
+                        <ul>
+                            <li> <a href="info">个人信息</a></li>
+                            <li> <a href="safety">安全设置</a></li>                 
+                            <li> <a href="points">我的积分</a></li>
+                            <li> <a href="coupon">我的VIp</a></li>
+                            <li> <a href="bonus">积分兑换</a></li>               
+                        </ul>
+                    </li>
 
 					<li class="person">
 						<p><i class="am-icon-tags"></i>我的收藏</p>
