--- a/application/index/view/jifen/news.html
+++ b/application/index/view/jifen/news.html
@@ -32,16 +32,16 @@
 						</ul>
 						<ul class="message-r">
 							<div class="topMessage home">
-								<div class="menu-hd"><a href="#" target="_top" class="h">首页</a></div>
+								<div class="menu-hd"><a href="/" target="_top" class="h">首页</a></div>
 							</div>
 							<div class="topMessage my-shangcheng">
-								<div class="menu-hd MyShangcheng"><a href="#" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
+								<div class="menu-hd MyShangcheng"><a href="info" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
 							</div>
 							<div class="topMessage mini-cart">
-								<div class="menu-hd"><a id="mc-menu-hd" href="#" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>购物车</span><strong id="J_MiniCartNum" class="h">0</strong></a></div>
+								<div class="menu-hd"><a id="mc-menu-hd" href="foot" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>足迹</span><strong id="J_MiniCartNum" class="h"></strong></a></div>
 							</div>
 							<div class="topMessage favorite">
-								<div class="menu-hd"><a href="#" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
+								<div class="menu-hd"><a href="collection" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
 						</ul>
 						</div>
 
@@ -130,36 +130,9 @@
 										</div>
 								</div>
 
-								<div class="am-tab-panel am-fade" id="tab3">
-									<!--消息 -->
-										<div class="s-msg-item s-msg-temp i-msg-downup">
-											<h6 class="s-msg-bar"><span class="s-name">卖家已退款&nbsp;¥12.90元</span></h6>
-											<div class="s-msg-content i-msg-downup-wrap">
-												<div class="i-msg-downup-con">
-													<a class="i-markRead" target="_blank" href="record.html">
-													<div class="m-item">	
-														<div class="item-pic">															
-																	<img src="__INDEX__images/kouhong.jpg_80x80.jpg" class="itempic J_ItemImg">
-														</div>
-														<div class="item-info">
-															<p class="item-comment">您购买的美康粉黛醉美唇膏卖家已退款</p>
-															<p class="item-time">2015-12-21&nbsp;17:38:29</p>
-														</div>
-																											
-                                                    </div>	
-
-													<p class="s-row s-main-content">
-															<a href="record.html">钱款去向</a> <i class="am-icon-angle-right"></i>
-													</p>
-													</a>
-												</div>
-											</div>
-											<a class="i-btn-forkout" href="#"><i class="am-icon-close am-icon-fw"></i></a>
-										</div>
-								</div>
 							</div>
 						</div>
-					</div>
+					</div>	
 
 				</div>
 				<!--底部-->
@@ -197,8 +170,8 @@
                             <li> <a href="info">个人信息</a></li>
                             <li> <a href="safety">安全设置</a></li>                 
                             <li> <a href="points">我的积分</a></li>
-                            <li> <a href="jifen/coupon">我的VIp    </a></li>
-                            <li> <a href="bonus.html">红包</a></li>               
+                            <li> <a href="coupon">我的VIp</a></li>
+                            <li> <a href="bonus">积分兑换</a></li>               
                         </ul>
                     </li>
                     <li class="person">
