--- a/application/index/view/jifen/points.html
+++ b/application/index/view/jifen/points.html
@@ -4,34 +4,47 @@
 	<head>
 		<meta charset="utf-8">
 		<title>积分明细</title>
+		<link href="__HTTP__/static/bootstrap/css/bootstrap.css"  rel="stylesheet" type="text/css">
 		<link href="__INDEX__AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
 		<link href="__INDEX__AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
 		<link href="__INDEX__css/personal.css" rel="stylesheet" type="text/css">
 		<link href="__INDEX__css/point.css" rel="stylesheet" type="text/css">
 		<script src="__INDEX__AmazeUI-2.4.2/assets/js/jquery.min.js"></script>
 		<script src="__INDEX__AmazeUI-2.4.2/assets/js/amazeui.js"></script>
+		
 	</head>
 
 	<body>
 		<!--头 -->
-		<aside class="menu">
-				
-				<ul>
-					<li class="person active">
-						<a href="info"><i class="am-icon-user"></i>个人中心</a>
-					</li>
-					<li class="person">
-						<ul>
-							<li> <a href="info">个人信息</a></li>
-							<li> <a href="safety">安全设置</a></li>					
-							<li> <a href="jifrn/points">我的积分</a></li>
-							<li> <a href="jifen/coupon">我的VIp	 </a></li>
-							<li> <a href="bonus.html">红包</a></li>	
-						</ul>
-					</li>
-
-			</aside>
+		 <header>
+            <article>
+                <div class="mt-logo">
+                    <!--顶部导航条 -->
+                    <div class="am-container header">
+                            
+                        <ul class="message-r">
+                                <div class="topMessage home">
+                                <div class="menu-hd"><a href="/ " target="_top" class="h">首页</a></div>
+                            </div>
+                            <div class="topMessage my-shangcheng">
+                                <div class="menu-hd MyShangcheng"><a href="info" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
+                            </div>
+                            <div class="topMessage mini-cart">
+                                <div class="menu-hd"><a id="mc-menu-hd" href="foot" target="_top"><span>足迹</span><strong id="J_MiniCartNum" class="h"></strong></a></div>
+                            </div>
+                            <div class="topMessage favorite">
+                                <div class="menu-hd"><a href="collection" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
+                        </ul>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                </div>
+            </article>
+        </header>       
+         <b class="line"></b>   
 		
+
+
 
 		<div class="center">
 			<div class="col-main">
@@ -74,6 +87,7 @@
 											{/foreach}
 										</tbody>
 									</table>
+									
 								</div>
 								<div class="am-tab-panel am-fade" id="tab2">
 									<table>
@@ -118,8 +132,10 @@
 											</tr>
 											{/if}
 											{/foreach}
+										
 										</tbody>
 									</table>
+								
 								</div>
 
 							</div>
@@ -162,8 +178,8 @@
                             <li> <a href="info">个人信息</a></li>
                             <li> <a href="safety">安全设置</a></li>                 
                             <li> <a href="points">我的积分</a></li>
-                            <li> <a href="jifen/coupon">我的VIp    </a></li>
-                            <li> <a href="bonus.html">红包</a></li>               
+                            <li> <a href="coupon">我的VIp  </a></li>
+                            <li> <a href="bonus">积分兑换</a></li>            
                         </ul>
                     </li>
                     <li class="person">
@@ -198,15 +214,16 @@
 	function success(data)
 	{
 
-		/*if (data  == 3) {
-			//alert('距离上次签到不到一天')
+		if (data  == 3) {
+			alert('距离上次签到不到一天')
+			return false;
+		} else {
+			var s = $('#number').text();
+			s = Number(s);
+			$('#number').text(s + 5);
+		}
 		
-		}*/
-		console.log(data);
-		var s = $('#number').text();
-		console.log(s);
-		console.log(s + 5);	
-		$('#number').text(s + 5);
+		
 
 	}
 
