--- a/application/index/view/user/forgot.html
+++ b/application/index/view/user/forgot.html
@@ -42,17 +42,6 @@
 
 	</head>
 	<body class="style-3">
-
-		<!-- <div class="container">
-			<div class="row">
-				<div class="col-md-12 text-center">	
-					<ul class="menu">
-						<li><a href="index.html">Style 1</a></li>
-						<li class="active"><a href="index2.html">Style 2</a></li>
-						<li><a href="index3.html">Style 3</a></li>
-					</ul>
-				</div>
-			</div> -->
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4">
 					
@@ -62,7 +51,8 @@
 						<h2>找回密码</h2>
 						<div class="form-group">
 							<div class="alert alert-success" role="alert">请输入手机号
-							<input type='text' name='phone' />
+							<input type='text' name='phone' id='inphone'/>
+							<p id="pphone" style="color:red"></p>
 							</div>
 						</div>
 						<div class="form-group">
@@ -74,11 +64,12 @@
 						
 						<div class="form-group">
 							<label for="email" class="sr-only">密码</label>
-							<input type="password" class="form-control" placeholder="密码" autocomplete="off" name='password'>
+							<input type="password" class="form-control" placeholder="密码" autocomplete="off" name='password' id='pass'>
 						</div>
 						<div class="form-group">
 							<label for="re-password" class="sr-only">确认密码</label>
-							<input type="password" class="form-control"  placeholder="确认密码" autocomplete="off" name='newpass'>
+							<input type="password" class="form-control"  placeholder="确认密码" autocomplete="off" name='pass' id='newpass'>
+							<p id="p" style="color:red"></p>
 						</div>
 						<div class="form-group">
 							<p><a href="register">注册 <a href="login">| 登陆 </a></p>
@@ -110,6 +101,35 @@
 	</body>
 </html>
 <script type="text/javascript">
+	var s = 'e';
+	var p = 'p';
+	//判断手机号
+	$("#inphone").blur(function () {
+		var val = $('#inphone').val();	
+		var mobilevalid = /^(0|86|17951)?(13[0-9]|15[012356789]|17[0678]|18[0-9]|14[57])[0-9]{8}$/;
+		if (!mobilevalid.test(val)) {
+			p = 'z';
+			$('#pphone').text('请输入正确的手机号码！');
+		} else {
+			p = 'p';
+			$('#pphone').text('');
+		}
+	});	
+
+	//判断密码是否相同
+	$("#newpass").blur(function () {
+
+		var newpass = $("#newpass").val();
+		var pass = $("#pass").val();
+		if (newpass != pass ) {
+			s= 'q';
+			$('#p').text('两次密码不相同');
+		} else {
+			s= 'e';
+			$('#p').text('');
+		}
+	});
+
 	var oBut = document.getElementById('but');
 	var flag = true;
 	$('#but').click(function(){
@@ -133,21 +153,31 @@
 					data:phone,
 					async:true,
 					success:success,
-				});				
+				});	
+			return false;				
 		}
 		return false;
 	});
+
 	//短信验证回调函数
 	function success (data)
 	{
-		alert(data);
+		console.log(data);
 	}
 
 	$('#xiugai').click(function () {
-		var data = $('input'),
+		if ($('#inphone').val() == '' || p != 'p') {
+			alert('请输入手机号');
+			return false;
+		}
+		if ($("#newpass").val() == '' || p !='p') {
+			alert('请正确输入密码');
+			return false;
+		}
+		var data = $('input'); 	
 		$.ajax({
 			type:'post',
-			url:'idnex/user/doforgot',
+			url:'index/user/doforgot',
 			data:data,
 			async:true,
 			success:succ
@@ -156,7 +186,17 @@
 	});
 	function succ(data)
 	{
-		alert(data);
+		console.log(data);
+		if(data == 0) {
+			alert('密码修改成功');
+		} else if (data == 1) {
+			alert('密码修改失败');
+		} else if (data == 2) {
+			alert('手机号码未注册');
+		} else {
+			alert('验证码不正确');
+		}
 	}
 </script>
+
 
