--- a/application/admin/view/post/back.html
+++ b/application/admin/view/post/back.html
@@ -195,7 +195,7 @@ $(function(){
 /*评论-删除*/
 function member_del(obj,id,pid){
 	$.ajax({
-		url:'http://www.damowang.com/admin/Postajax/backdel',
+		url:'http://angel.qvbilam.xin/admin/Postajax/backdel',
 		data:"id="+pid,
 		type:'post',
 		success:success
@@ -219,7 +219,7 @@ function datadel()
 			id = $('input:checked').eq(1).attr('values1');
 			$('input:checked').eq(1).parents("tr").remove();
 			$.ajax({
-				url:'http://www.damowang.com/admin/Postajax/backdel',
+				url:'http://angel.qvbilam.xin/admin/Postajax/backdel',
 				data:"id="+id,
 				type:'post',
 				success:asd,
