--- a/application/index/view/detail/detail.html
+++ b/application/index/view/detail/detail.html
@@ -280,7 +280,7 @@ function submit_btn(){
 $('#huan').click(function(){
   $('.movie_list').html('');
   $.ajax({
-    url:'http://www.damowang.com/index/Ajax/huan',
+    url:'http://angel.qvbilam.xin/index/Ajax/huan',
     data:'id='+vid,
     type:'post',
     success:success
