--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -94,16 +94,16 @@
        <div class="silder-scroll">
             <div class="silder-main">
                 <div class="silder-main-img">
-                    <img src="../__INDEX__img/1-1.jpg" alt="">
+                    <!-- <img src="../__INDEX__img/1-1.jpg" alt=""> -->
                 </div>
                 <div class="silder-main-img">
-                    <img src="../__INDEX__img/2-1.jpg" alt="">
+                    <!-- <img src="../__INDEX__img/2-1.jpg" alt=""> -->
                 </div>
                 <div class="silder-main-img">
-                    <img src="../__INDEX__img/3-1.png" alt="">
+                    <!-- <img src="../__INDEX__img/3-1.png" alt=""> -->
                 </div>
                  <div class="silder-main-img">
-                    <img src="../__INDEX__img/3-1.png" alt="">
+                    <!-- <img src="../__INDEX__img/3-1.png" alt=""> -->
                 </div>
             </div>
         </div>
