--- a/application/index/view/video/list.html
+++ b/application/index/view/video/list.html
@@ -279,7 +279,7 @@ $(".listIndex a ").bind("click",function(){
   //console.log(data);
   $.ajax({
     type:'post',
-    url:'http://www.damowang.com/index/Ajax/listAjax',    
+    url:'http://angel.qvbilam.xin/index/Ajax/listAjax',    
     data:"data="+data,//脑残一样！
     success:videoChange,
   })
@@ -308,7 +308,7 @@ $(".selectedShow em").bind("click",function(){
   //console.log(data);
   $.ajax({
     type:'post',
-    url:'http://www.damowang.com/index/Ajax/listAjax',    
+    url:'http://angel.qvbilam.xin/index/Ajax/listAjax',    
     data:"data="+data,//脑残一样！
     success:videoChange,
   })
@@ -322,7 +322,7 @@ $('.classA').click(function() {
   $('.styleA').remove();
   //alert($(this).attr('values2'));
   $.ajax({
-    url:'http://www.damowang.com/index/Ajax/styleChange',
+    url:'http://angel.qvbilam.xin/index/Ajax/styleChange',
     data:'cid='+$(this).attr('values2'),
     type:'post',
     //建议别读。读了特么的烦死了
@@ -355,7 +355,7 @@ $('.classA').click(function() {
       //console.log(data);
       $.ajax({
         type:'post',
-        url:'http://www.damowang.com/index/Ajax/listAjax',    
+        url:'http://angel.qvbilam.xin/index/Ajax/listAjax',    
         data:"data="+data,//脑残一样！
         success:videoChange,
       })
@@ -380,7 +380,7 @@ $(".eliminateCriteria").bind("click",function(){
   //console.log(data);
   $.ajax({
     type:'post',
-    url:'http://www.damowang.com/index/Ajax/listAjax',    
+    url:'http://angel.qvbilam.xin/index/Ajax/listAjax',    
     data:"data="+data,//脑残一样！
     success:videoChange,
   })
