--- a/application/admin/view/post/post.html
+++ b/application/admin/view/post/post.html
@@ -183,7 +183,7 @@ $(function(){
 /*评论-删除*/
 function member_del(obj,id,pid){
 	$.ajax({
-		url:'http://www.damowang.com/admin/Postajax/postdel',
+		url:'http://angel.qvbilam.xin/admin/Postajax/postdel',
 		data:"id="+pid,
 		type:'post',
 		success:success
@@ -207,7 +207,7 @@ function datadel()
 			id = $('input:checked').eq(1).attr('values1');
 			$('input:checked').eq(1).parents("tr").remove();
 			$.ajax({
-				url:'http://www.damowang.com/admin/Postajax/postdel',
+				url:'http://angel.qvbilam.xin/admin/Postajax/postdel',
 				data:"id="+id,
 				type:'post',
 			});
