--- a/application/index/view/video/videoplay.html
+++ b/application/index/view/video/videoplay.html
@@ -14,8 +14,8 @@
   <script src="../__PINGFEN__grade.js" type="text/javascript"></script> 
   <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/bootstrap-3.3.4.css"> 
   <!-- CSS -->
-  <link rel="stylesheet" href="../__INDEX__css/fonts/font-awesome.css">
-  <link rel="stylesheet" href="../__INDEX__css/main.css">
+  <link rel="stylesheet" href="__INDEX__/css/fonts/font-awesome.css">
+  <link rel="stylesheet" href="__INDEX__/css/main.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,900%7CMontserrat:400,700%7CLora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="__INDEX__img/favicon.png">
   <link rel="apple-touch-icon" href="__INDEX__img/apple-touch-icon.png">
@@ -38,14 +38,14 @@
   <meta name="browsermode" content="application"><!-- UC应用模式 -->
   <meta name="x5-page-mode" content="app"><!-- QQ应用模式 -->
   <meta name="msapplication-tap-highlight" content="no"><!-- windows phone 点击无高光 -->
-  <link rel="stylesheet" href="../__INDEX__lunbotu.css" />
+  <link rel="stylesheet" href="__INDEX__/lunbotu.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../__INDEX__css/bootstrap.css" rel="stylesheet" type="text/css" />
-  <link href="../__INDEX__css/common.css" rel="stylesheet" type="text/css" />
-  <script src="../__INDEX__js/jquery-1.9.1.min.js" type="text/javascript"></script>
-  <script src="../__INDEX__js/jquery.SuperSlide.2.1.1.js" type="text/javascript"></script>
-  <script src="../__INDEX__js/bootstrap.min.js" type="text/javascript"></script>
-  <script src="../__INDEX__js/common.js" type="text/javascript"></script>
+  <link href="__INDEX__/css/bootstrap.css" rel="stylesheet" type="text/css" />
+  <link href="__INDEX__/css/common.css" rel="stylesheet" type="text/css" />
+  <script src="__INDEX__/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+  <script src="__INDEX__/js/jquery.SuperSlide.2.1.1.js" type="text/javascript"></script>
+  <script src="__INDEX__/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="__INDEX__/js/common.js" type="text/javascript"></script>
   <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -325,7 +325,7 @@ $('.quxiao').click(function() {
 $('.fasong').click(function() {
   data = {'val':$(this).prev().prev().val(),'pid':$(this).prev().prev().attr('pid'),'vid':vid};
   $.ajax({
-    url:'http://www.damowang.com/backadd?vid='+vid,
+    url:'http://angel.qvbilam.xin/backadd?vid='+vid,
     type:'post',
     data:data,
     success:postadd,
@@ -345,7 +345,7 @@ $('#pingfen').click(function (){
   //console.log($('#form1').serializeArray());
   data = $('#form1').serializeArray();
   $.ajax({
-    url:'http://www.damowang.com/markadd?vid='+vid,
+    url:'http://angel.qvbilam.xin/markadd?vid='+vid,
     type:'post',
     data:data,
     success:pingfen,
@@ -393,7 +393,7 @@ function postadd($data)//还是别读这一段了。很难受的一段
   $('.fasong').click(function() {
     data = {'val':$(this).prev().prev().val(),'pid':$(this).prev().prev().attr('pid'),'vid':vid};
     $.ajax({
-      url:'http://www.damowang.com/backadd?vid='+vid,
+      url:'http://angel.qvbilam.xin/backadd?vid='+vid,
       type:'post',
       data:data,
       success:postadd,
@@ -415,7 +415,7 @@ $('.fenxiang').click(function(){
 //置顶
 $('.zhiding').click(function(){
   $.ajax({
-    url:'http://www.damowang.com/index/Videoajax/zhiding',
+    url:'http://angel.qvbilam.xin/index/Videoajax/zhiding',
     type:'post',
     data:'id='+vid,
     success:bAjax,
@@ -424,7 +424,7 @@ $('.zhiding').click(function(){
 //取消置顶
 $('.quxiao').click(function(){
   $.ajax({
-    url:'http://www.damowang.com/index/Videoajax/quxiao',
+    url:'http://angel.qvbilam.xin/index/Videoajax/quxiao',
     type:'post',
     data:'id='+vid,
     success:bAjax,
@@ -433,7 +433,7 @@ $('.quxiao').click(function(){
 //删除
 $('.shanchu').click(function(){
   $.ajax({
-    url:'http://www.damowang.com/index/Videoajax/shanchu',
+    url:'http://angel.qvbilam.xin/index/Videoajax/shanchu',
     type:'post',
     data:'id='+vid,
     success:delAjax,
@@ -447,7 +447,7 @@ function bAjax(data)
 }
 function delAjax()
 {
-  window.location.replace("http://www.damowang.com");
+  window.location.replace("http://angel.qvbilam.xin");
 }
 //换视频
 $('.change_link').click(function(){
