--- a/application/admin/view/lists/feedbackList.html
+++ b/application/admin/view/lists/feedbackList.html
@@ -53,7 +53,7 @@
 						<ul class="dropDown-menu menu radius box-shadow">
 							
 							<li><a href="admin/user/login">切换账户</a></li>
-							<li><a href="http://www.damowang.com">退出</a></li>
+							<li><a href="http://angel.qvbilam.xin">退出</a></li>
 				</ul>
 			</li>
 					
