--- a/application/admin/view/manage/classBig.html
+++ b/application/admin/view/manage/classBig.html
@@ -275,7 +275,7 @@ function dbank(id,obj)
 {
 	$('#Tvideo table').remove();
 	$.ajax({
-		url:'http://www.damowang.com/admin/Manageajax/bankdel',
+		url:'http://angel.qvbilam.xin/admin/Manageajax/bankdel',
 		type:'post',
 		data:'id='+id,
 		success:success
@@ -289,7 +289,7 @@ function hbank(id,obj)
 {
 	$('#Tvideo table').remove();
 	$.ajax({
-		url:'http://www.damowang.com/admin/Manageajax/bankhui',
+		url:'http://angel.qvbilam.xin/admin/Manageajax/bankhui',
 		type:'post',
 		data:'id='+id,
 		success:success
@@ -304,7 +304,7 @@ function dclass(id,obj)
 {
 	$('#Tvideo table').remove();
 	$.ajax({
-		url:'http://www.damowang.com/admin/Manageajax/classdel',
+		url:'http://angel.qvbilam.xin/admin/Manageajax/classdel',
 		type:'post',
 		data:'id='+id,
 		success:success
@@ -318,7 +318,7 @@ function hclass(id,obj)
 {
 	
 	$.ajax({
-		url:'http://www.damowang.com/admin/Manageajax/classhui',
+		url:'http://angel.qvbilam.xin/admin/Manageajax/classhui',
 		type:'post',
 		data:'id='+id,
 		success:success
@@ -339,7 +339,7 @@ function hclass(id,obj)
 function dstyle(id,obj)
 {
 	$.ajax({
-		url:'http://www.damowang.com/admin/Manageajax/styledel',
+		url:'http://angel.qvbilam.xin/admin/Manageajax/styledel',
 		type:'post',
 		data:'id='+id,
 		success:success
@@ -353,7 +353,7 @@ function dstyle(id,obj)
 function hstyle(id,obj)
 {
 	$.ajax({
-		url:'http://www.damowang.com/admin/Manageajax/stylehui',
+		url:'http://angel.qvbilam.xin/admin/Manageajax/stylehui',
 		type:'post',
 		data:'id='+id,
 		success:success
