--- a/application/index/view/video/list.html
+++ b/application/index/view/video/list.html
@@ -9,22 +9,22 @@ html{
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="../__INDEX__css/bootstrap.css" rel="stylesheet" type="text/css" />
-<link href="../__INDEX__css/common.css" rel="stylesheet" type="text/css" />
-<script src="../__INDEX__js/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script src="../__INDEX__js/jquery.SuperSlide.2.1.1.js" type="text/javascript"></script>
-<script src="../__INDEX__js/bootstrap.min.js" type="text/javascript"></script>
-<script src="../__INDEX__js/common.js" type="text/javascript"></script>
+<link href="__INDEX__css/bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="__INDEX__css/common.css" rel="stylesheet" type="text/css" />
+<script src="__INDEX__js/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="__INDEX__js/jquery.SuperSlide.2.1.1.js" type="text/javascript"></script>
+<script src="__INDEX__js/bootstrap.min.js" type="text/javascript"></script>
+<script src="__INDEX__js/common.js" type="text/javascript"></script>
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="../__INDEX__img/favicon.png">
-<link rel="apple-touch-icon" href="../__INDEX__img/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="../__INDEX__img/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="../__INDEX__img/apple-touch-icon-114x114.png">
+<link rel="shortcut icon" href="__INDEX__img/favicon.png">
+<link rel="apple-touch-icon" href="__INDEX__img/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="72x72" href="__INDEX__img/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="114x114" href="__INDEX__img/apple-touch-icon-114x114.png">
 
 <!-- CSS -->
-<link rel="stylesheet" href="../__INDEX__css/fonts/font-awesome.css">
-<link rel="stylesheet" href="../__INDEX__css/main.css">
+<link rel="stylesheet" href="__INDEX__css/fonts/font-awesome.css">
+<link rel="stylesheet" href="__INDEX__css/main.css">
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,900%7CMontserrat:400,700%7CLora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
 <title>大魔王影院</title>
