--- a/application/admin/view/manage/updateManage.html
+++ b/application/admin/view/manage/updateManage.html
@@ -249,7 +249,7 @@ $('#banksel').change(function(){
 	var bid = $(this).val();
 	$('#classsel').html('');
 	$.ajax({
-		url:'http://www.damowang.com/admin/Videoajax/videoajax',
+		url:'http://angel.qvbilam.xin/admin/Videoajax/videoajax',
 		type:'post',
 		success:bankchange,
 	});
@@ -270,7 +270,7 @@ $('#classsel').change(function(){
 	var cid = $(this).val();
 	$('#stylesel').html('');
 	$.ajax({
-		url:'http://www.damowang.com/admin/Videoajax/videoajax',
+		url:'http://angel.qvbilam.xin/admin/Videoajax/videoajax',
 		type:'post',
 		success:classchange,
 	});
